Minor edit OL 8.4

--- a/nvme_ol_84.adoc
+++ b/nvme_ol_84.adoc
@@ -81,10 +81,9 @@ defaults {
     enable_foreign  NONE
 }
 ----
+
+Restart the multipathd daemon by running a systemctl restart multipathd to let the new setting take effect.
 ====
-
-. Restart the multipathd daemon by running a systemctl restart multipathd to let the new setting take effect.
-
 
 == Configuring the Broadcom FC adapter for NVMe/FC
 
